--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,23 @@ body {
     /*center to div*/
     height: 80%;
     max-height: 700px;
+    width: 90vw;
+    max-width: 1200px;
     border: 1px solid red;
-    flex: 1 0 auto;
+}
+
+.page .container.left {
+    display: flex;
+    padding: 10px;
+    flex-direction: column;
+    flex: 1
+}
+
+.page .container.left p {
+    margin-top: auto;
+}
+
+.page .container.right {
+    flex: 2;
+    background-color: blue;
 }
