--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,13 @@ body {
     height: 100vh;
 }
 
+.background {
+    position: fixed;
+    background: linear-gradient(#A0796E, #417681);
+    height: 100vh;
+    width: 100%;
+}
+
 .page {
     display: flex;
     position: absolute;
@@ -16,14 +23,20 @@ body {
     max-height: 700px;
     width: 90vw;
     max-width: 1200px;
-    border: 1px solid red;
+    /* From https://css.glass */
+    background: rgba(255, 255, 255, 0.21);
+    border-radius: 20px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 }
 
 .page .container.left {
     display: flex;
-    padding: 10px;
+    padding: 20px;
     flex-direction: column;
-    flex: 1
+    flex: 1 0;
+    background: url(./images/sky.png);
+    border-radius: 20px;
+    color: white;
 }
 
 .page .container.left p {
@@ -32,5 +45,5 @@ body {
 
 .page .container.right {
     flex: 2;
-    background-color: blue;
+    padding: 10px;
 }
