--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: 'Glacial Indefirrence';
+    src: url(./fonts/GlacialIndifference-Regular.woff);
+  }
+
+@font-face {
+    font-family: 'League Spartan Bold';
+    src: url(./fonts/LeagueSpartan-Bold.woff);
+  }
+
 body {
     margin: 0;
     position: relative;
@@ -21,10 +31,11 @@ body {
     /*center to div*/
     height: 80%;
     max-height: 700px;
+    min-height: 480px;
     width: 90vw;
     max-width: 1200px;
     /* From https://css.glass */
-    background: rgba(255, 255, 255, 0.21);
+    background: rgba(255, 255, 255, 0.302);
     border-radius: 20px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 }
@@ -39,11 +50,27 @@ body {
     color: white;
 }
 
+.page .container.left h1:first-of-type {
+    margin-top: 0;
+    margin-bottom: 20%;
+    font-family: 'League Spartan Bold', sans-serif;
+}
+
+.page .container.left h1:nth-child(2) {
+    font-family: 'Glacial Indefirrence', sans-serif;
+    font-weight: lighter;
+    font-size: 40px;
+}
+
 .page .container.left p {
     margin-top: auto;
+    font-family: 'Glacial Indefirrence', sans-serif;
+    font-weight: lighter;
 }
 
 .page .container.right {
     flex: 2;
     padding: 10px;
+    font-family: 'Glacial Indefirrence', sans-serif;
+    font-weight: lighter;
 }
