--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,74 @@ body {
 
 .page .container.right {
     flex: 2;
-    padding: 10px;
+    padding: 50px;
+    font-family: 'Glacial Indefirrence', sans-serif;
+}
+
+.container.right h1 {
+    color: white;
+    font-weight: lighter;
+}
+
+form {
+    margin-left: 5%;
+}
+
+form a {
+    color: #B0D6D7;
+}
+
+form label {
+    color: white;
+}
+
+form label:not([for="checkbox"]) {
+    display: block;
+    font-size: 20px;
+    margin-left: 20px;
+}
+
+form input{
+    display: block;
+}
+
+form input:not([type="checkbox"]) {
+    width: 100%;
+    font-size: 18px;
+    padding: 13px;
+    border-radius: 25px;
+    border: none;
+    box-sizing: border-box;
+    margin-bottom: 10px;
     font-family: 'Glacial Indefirrence', sans-serif;
     font-weight: lighter;
+    appearance: none;
+}
+
+form input:not([type="checkbox"])::placeholder {
+    position: relative;
+    left: 7px;
+    color: #A6A6A6;
+    font-family: 'Glacial Indefirrence', sans-serif;
+    font-weight: lighter;
+}
+
+form button {
+    display: block;
+    appearance: none;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    background-color: #307685;
+    margin: 20px auto;
+    font-size: 25px;
+    width: 300px;
+    font-family: 'Glacial Indefirrence', sans-serif;
+    font-weight: lighter;
+    padding: 10px;
+
+}
+
+form p {
+    color: white;
 }
