--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body {
     /*center to div*/
     height: 80%;
     max-height: 700px;
-    min-height: 480px;
+    min-height: 600px;
     width: 90vw;
     max-width: 1200px;
     /* From https://css.glass */
@@ -83,7 +83,7 @@ form {
     margin-left: 5%;
 }
 
-form a {
+form a{
     color: #B0D6D7;
 }
 
@@ -95,10 +95,7 @@ form label:not([for="checkbox"]) {
     display: block;
     font-size: 20px;
     margin-left: 20px;
-}
-
-form input{
-    display: block;
+    margin-bottom: 5px;
 }
 
 form input:not([type="checkbox"]) {
@@ -122,6 +119,11 @@ form input:not([type="checkbox"])::placeholder {
     font-weight: lighter;
 }
 
+form input[type="checkbox"] {
+    padding: 8px;
+    margin-right: 10px;
+}
+
 form button {
     display: block;
     appearance: none;
@@ -140,4 +142,72 @@ form button {
 
 form p {
     color: white;
+}
+
+@media only screen and (max-height: 800px) {
+    .page .container.right {
+        padding: 20px 50px;
+    }
+  }
+
+@media only screen and (max-width: 670px) {
+.page {
+    display: block;
+    /*center to div*/
+    top: 0;
+    left: 0;
+    transform: none;
+    /*center to div*/
+    max-height: none;
+    min-height: none;
+    max-width: none;
+    height: auto;
+    width: 100%;
+    border-radius: 0;
+}
+
+.page .container.left {
+    padding: 20px;
+    border-radius: 0 0 20px 20px;
+    width: 100%;
+    height: 100vh;
+    box-sizing: border-box;
+}
+
+.page .container.left h1:first-of-type {
+    font-size: 40px;
+}
+
+.page .container.left h1:nth-child(2) {
+    font-size: 50px;
+}
+
+.page .container.left p {
+    font-size: 20px;
+}
+
+.page .container.right {
+    padding: 50px;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100vh;
+}
+
+.container.right h1 {
+    text-align: center;
+}
+
+form {
+    margin: 0;
+}
+
+form button {
+    width: 100%;
+}
+}
+
+@media only screen and (max-width: 370px) {
+    .page .container.right {
+        padding: 20px;
+    }
 }
