--- a/styles.css
+++ b/styles.css
@@ -171,6 +171,7 @@ form p {
     border-radius: 0 0 20px 20px;
     width: 100%;
     height: 100vh;
+    min-height: 600px;
     box-sizing: border-box;
 }
 
@@ -190,6 +191,7 @@ form p {
     padding: 50px;
     box-sizing: border-box;
     width: 100%;
+    min-height: 600px;
     height: 100vh;
 }
 
